07-Terraform-EC2Instance-SecurityGroups-ELB/vpc-routetable.tf
// Public Route Table

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "${var.publicRT}"
  }
  depends_on = [aws_internet_gateway.igw]
}


// Private Route Table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }
  tags = {
    Name = "${var.privateRT}"
  }
  depends_on = [aws_nat_gateway.ngw]
}
